[gd_scene load_steps=12 format=3 uid="uid://bwpvmy0ng44l2"]

[ext_resource type="Texture2D" uid="uid://cb77psjak8ewy" path="res://Assets/Sprites/Enemy/Speadow/Speadow-Sheet.png" id="1_wemmr"]
[ext_resource type="Script" path="res://Scripts/speadov.gd" id="1_xwsgk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_f4y7l"]
atlas = ExtResource("1_wemmr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ppuli"]
atlas = ExtResource("1_wemmr")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hv5qh"]
atlas = ExtResource("1_wemmr")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2rd03"]
atlas = ExtResource("1_wemmr")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iff42"]
atlas = ExtResource("1_wemmr")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tsaf1"]
atlas = ExtResource("1_wemmr")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_snyrt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4y7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ppuli")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hv5qh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2rd03")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iff42")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tsaf1")
}],
"loop": true,
"name": &"Move",
"speed": 15.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dyofy"]
radius = 5.0
height = 22.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1gigx"]
radius = 7.0
height = 22.0

[node name="Speadov" type="CharacterBody2D"]
script = ExtResource("1_xwsgk")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_snyrt")
animation = &"Move"
autoplay = "Move"
frame = 5
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("CapsuleShape2D_dyofy")

[node name="DamageArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2(0, 5)
shape = SubResource("CapsuleShape2D_1gigx")

[node name="AttackTimer" type="Timer" parent="."]

[connection signal="body_entered" from="DamageArea" to="." method="_on_damage_area_body_entered"]
[connection signal="body_exited" from="DamageArea" to="." method="_on_damage_area_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
